Fixed the login after registration error, fixed another z-indexing issue where the navbar wasn't clickable

--- a/client/src/components/nav/Navbar.css
+++ b/client/src/components/nav/Navbar.css
@@ -38,7 +38,6 @@
   top: 0;
   height: 80px;
   width: 100%;
-  z-index: 1;
 }
 
 .navzone {
